Corrected grammar issue on main page
missing an ! after hi

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <main>
         <section>
-            <p>Hi I'm Chirag Sabharwal. Welcome to spooky season.</p>
+            <p>Hi! I'm Chirag Sabharwal. Welcome to spooky season.</p>
         </section>
 
         <section>
